	* client/callback.h, client/ai/greedy.c, client/common/setup.c,
	client/gtk/interface.c, common/map.h, common/map_query.c,
	common/gtk/guimap.h, server/robber.c: Replaced all casts to
	CheckFunc by functions with the correct prototype. This allows player
	of the PPC to play Pioneers again. Cleanup of unused arguments in the
	used functions.

2005-09-25  0.9.31  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, rules.make, client/ai/Makefile.am,
	client/common/Makefile.am, client/gtk/Makefile.am, common/Makefile.am,
	common/gtk/Makefile.am, editor/gtk/Makefile.am,
	meta-server/Makefile.am, server/Makefile.am, server/gtk/Makefile.am:
	Moved $(debug_includes) from rules.make to configure.ac. There are now
	four new commandline options to ./configure. All four are per default
	enabled when --enable-maintainer-mode is given. The four are:
	--enable-warnings, --enable-debug, --enable-logging,
	--enable-deprecation-checks. This patch is based on a patch by Bas
	Wijnen.

2005-09-17  0.9.30  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/quote.c, common/gtk/config-gnome.c: Removed the
	definition of *_DISABLED_DEPRECATED to make the source build again

2005-09-17  Roland Clobus <rclobus@bigfoot.com>
	* README.Cygwin: Added gettext-devel as required package

2005-09-16  0.9.29  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Add #ifdef HAVE_HELP around static declaration
	* configure.ac, client/ai/Makefile.am, client/common/Makefile.am,
	common/Makefile.am, meta-server/Makefile.am, server/Makefile.am: Use
	GLib includes in Makefile.am where needed
	
2005-09-14  0.9.28  Bas Wijnen <shevek@fmf.nl>

	* client/gtk/frontend.c: Apply workaround for Gtk bug to action
	buttons.

2005-09-14  0.9.27  Bas Wijnen <shevek@fmf.nl>

	* editor/gtk/editor.c: Warn instead of crash when clearing nonexistant
	hex.  Set minimum map size to 1, not 2.  Set sensitivity of correct
	buttons when resize limits are hit.  Let ports disappear correctly.  